--- a/package.json
+++ b/package.json
@@ -14,10 +14,24 @@
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.14",
     "@mui/material-next": "^6.0.0-alpha.79",
+    "axios": "^1.3.5",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "formidable": "^2.1.1",
+    "huggingface": "^1.4.0",
+    "i18next": "^22.4.14",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.2.0",
+    "mv": "^2.1.1",
     "next": "13.2.4",
+    "next-i18next": "^13.2.2",
+    "openai": "^3.2.1",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "recharts": "^2.5.0"
+    "react-i18next": "^12.2.0",
+    "recharts": "^2.5.0",
+    "uuid": "^9.0.0"
   }
 }
