--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "formidable": "^2.1.1",
+    "formidable": "^3.2.5",
     "huggingface": "^1.4.0",
     "i18next": "^22.4.14",
     "i18next-browser-languagedetector": "^7.0.1",
@@ -32,6 +32,7 @@
     "react-dom": "18.2.0",
     "react-i18next": "^12.2.0",
     "recharts": "^2.5.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "ytdl-core": "^4.11.4"
   }
 }
