--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 IPSTACK_API_KEY=2787d52ec97016aebf3bf36a7cda9345
+GITHUB_ID=cb672cb4695a753513c8
+GITHUB_SECRET=32360f84e08aa23c281dca232b475682e03be891
