--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "i18next-http-backend": "^2.2.0",
     "mv": "^2.1.1",
     "next": "13.2.4",
+    "next-auth": "^4.22.1",
     "next-i18next": "^13.2.2",
     "openai": "^3.2.1",
     "prop-types": "^15.8.1",
