--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.14",
     "@mui/material-next": "^6.0.0-alpha.79",
+    "@next-auth/mongodb-adapter": "1.1.2",
     "axios": "^1.3.5",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -30,6 +31,7 @@
     "openai": "^3.2.1",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
+    "mongodb": "^4.16.0",
     "react-dom": "18.2.0",
     "react-i18next": "^12.2.0",
     "recharts": "^2.5.0",
