--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.11.14",
     "@mui/material-next": "^6.0.0-alpha.79",
     "@next-auth/mongodb-adapter": "1.1.2",
+    "@vercel/analytics": "^1.0.0",
     "axios": "^1.3.5",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -24,6 +25,7 @@
     "i18next": "^22.4.14",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.2.0",
+    "mongodb": "^4.16.0",
     "mv": "^2.1.1",
     "next": "13.2.4",
     "next-auth": "^4.22.1",
@@ -31,7 +33,6 @@
     "openai": "^3.2.1",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
-    "mongodb": "^4.16.0",
     "react-dom": "18.2.0",
     "react-i18next": "^12.2.0",
     "recharts": "^2.5.0",
