--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.3.5",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.7",
     "express": "^4.18.2",
     "formidable": "^3.2.5",
     "huggingface": "^1.4.0",
@@ -38,5 +39,8 @@
     "recharts": "^2.5.0",
     "uuid": "^9.0.0",
     "ytdl-core": "^4.11.4"
+  },
+  "devDependencies": {
+    "prettier": "2.8.8"
   }
 }
