--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^12.2.0",
+    "react-swipeable-views": "^0.14.0",
     "recharts": "^2.5.0",
     "uuid": "^9.0.0",
     "ytdl-core": "^4.11.4"
