--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.11",
+    "@mui/lab": "^5.0.0-alpha.133",
     "@mui/material": "^5.11.14",
     "@mui/material-next": "^6.0.0-alpha.79",
+    "@mui/x-date-pickers": "^6.6.0",
     "@next-auth/mongodb-adapter": "1.1.2",
     "@vercel/analytics": "^1.0.0",
     "axios": "^1.3.5",
@@ -26,11 +28,14 @@
     "i18next": "^22.4.14",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.2.0",
+    "js-cookie": "^3.0.5",
     "mongodb": "^4.16.0",
     "mv": "^2.1.1",
     "next": "13.2.4",
     "next-auth": "^4.22.1",
     "next-i18next": "^13.2.2",
+    "nextjs-google-analytics": "^2.3.3",
+    "nookies": "^2.5.2",
     "openai": "^3.2.1",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
