--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "jtooly",
-  "version": "0.1.0",
+  "version": "0.9.1",
+  "license": "UNLICENSED",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -20,10 +21,13 @@
     "@vercel/analytics": "^1.0.0",
     "axios": "^1.3.5",
     "body-parser": "^1.20.2",
+    "colors": "^1.4.0",
     "cors": "^2.8.5",
-    "dayjs": "^1.11.7",
+    "dayjs": "^1.11.8",
     "express": "^4.18.2",
     "fast-xml-parser": "^4.2.4",
+    "ffmpeg-static": "^5.1.0",
+    "fluent-ffmpeg": "^2.1.2",
     "formidable": "^3.2.5",
     "huggingface": "^1.4.0",
     "i18next": "^22.4.14",
@@ -32,18 +36,23 @@
     "js-cookie": "^3.0.5",
     "mongodb": "^4.16.0",
     "mv": "^2.1.1",
+    "net": "^1.0.2",
     "next": "13.2.4",
     "next-auth": "^4.22.1",
     "next-i18next": "^13.2.2",
     "nextjs-google-analytics": "^2.3.3",
     "nookies": "^2.5.2",
     "openai": "^3.2.1",
+    "ping": "^0.4.4",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^12.2.0",
+    "react-markdown": "^8.0.7",
     "react-swipeable-views": "^0.14.0",
     "recharts": "^2.5.0",
+    "request-ip": "^3.3.0",
+    "three": "^0.153.0",
     "uuid": "^9.0.0",
     "ytdl-core": "^4.11.4"
   },
