--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@mui/material": "^5.11.14",
     "@mui/material-next": "^6.0.0-alpha.79",
     "@mui/x-date-pickers": "^6.6.0",
-    "@next-auth/mongodb-adapter": "1.1.2",
+    "@next-auth/mongodb-adapter": "^1.1.2",
     "@vercel/analytics": "^1.0.0",
     "axios": "^1.3.5",
     "body-parser": "^1.20.2",
@@ -37,7 +37,7 @@
     "mongodb": "^4.16.0",
     "mv": "^2.1.1",
     "net": "^1.0.2",
-    "next": "13.2.4",
+    "next": "^13.2.4",
     "next-auth": "^4.22.1",
     "next-i18next": "^13.2.2",
     "nextjs-google-analytics": "^2.3.3",
