--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 3001",
-    "build": "NODE_OPTIONS=--max_old_space_size=4096 next build",
+    "build": " next build",
     "start": "next start -p 3001",
     "lint": "next lint -p 3001"
   },
@@ -13,50 +13,25 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.11",
-    "@mui/lab": "^5.0.0-alpha.133",
     "@mui/material": "^5.11.14",
-    "@mui/material-next": "^6.0.0-alpha.79",
     "@mui/x-date-pickers": "^6.6.0",
     "@next-auth/mongodb-adapter": "^1.1.2",
-    "@vercel/analytics": "^1.0.0",
-    "axios": "^1.3.5",
-    "body-parser": "^1.20.2",
-    "colors": "^1.4.0",
-    "cors": "^2.8.5",
     "dayjs": "^1.11.8",
-    "express": "^4.18.2",
-    "fast-xml-parser": "^4.2.4",
     "ffmpeg-static": "^5.1.0",
     "fluent-ffmpeg": "^2.1.2",
     "formidable": "^3.2.5",
-    "huggingface": "^1.4.0",
-    "i18next": "^22.4.14",
-    "i18next-browser-languagedetector": "^7.0.1",
-    "i18next-http-backend": "^2.2.0",
     "js-cookie": "^3.0.5",
     "mongodb": "^5.6.0",
-    "mv": "^2.1.1",
-    "net": "^1.0.2",
     "next": "^13.2.4",
     "next-auth": "^4.22.1",
-    "next-i18next": "^13.2.2",
     "nextjs-google-analytics": "^2.3.3",
-    "nookies": "^2.5.2",
-    "openai": "^3.2.1",
-    "ping": "^0.4.4",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-i18next": "^12.2.0",
-    "react-markdown": "^8.0.7",
-    "react-swipeable-views": "^0.14.0",
-    "recharts": "^2.5.0",
-    "request-ip": "^3.3.0",
-    "three": "^0.153.0",
-    "uuid": "^9.0.0",
     "ytdl-core": "^4.11.4"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^13.4.5",
     "grunt": "^1.6.1",
     "prettier": "2.8.8"
   }
